@@ -62,6 +62,14 @@
 
 2018-01-14  Bruno Haible  <bruno@clisp.org>
 
+	Enable most optimizations on Hurd/i386.
+	* Makefile.devel (multibuild-hurd-i386): Enable all build variants
+	that work.
+	* makemake.in (XCFLAGS): For Hurd/i386, enable all optimizations
+	except ASM.
+
+2018-01-14  Bruno Haible  <bruno@clisp.org>
+
 	Fix failure of the builds with -DWIDE on Hurd/i386 and FreeBSD/i386.
 	* makemake.in: When compiling with GCC for i386 and -DWIDE, reduce
 	optimizations.
